--- a/AutoGrad.vcxproj.filters
+++ b/AutoGrad.vcxproj.filters
@@ -326,6 +326,9 @@
     <ClInclude Include="Test_NDThreadPool.h">
       <Filter>Header Files\Test</Filter>
     </ClInclude>
+    <ClInclude Include="TiledMatMul.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="TestData\XeLogits.txt">
