--- a/AutoGrad.vcxproj.filters
+++ b/AutoGrad.vcxproj.filters
@@ -329,6 +329,9 @@
     <ClInclude Include="TiledMatMul.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NDThreadPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="TestData\XeLogits.txt">
