--- a/AutoGrad.vcxproj.filters
+++ b/AutoGrad.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="Test_NDThreadPool.cpp">
       <Filter>Source Files\Test</Filter>
     </ClCompile>
+    <ClCompile Include="Test_Broadcast.cpp">
+      <Filter>Source Files\Test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Layer.h">
@@ -331,6 +334,9 @@
     </ClInclude>
     <ClInclude Include="NDThreadPool.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Test_Broadcast.h">
+      <Filter>Header Files\Test</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
